<resources>
    <string name="app_name">Lets Try</string>
    <string name="start_reporting">You should be</string>
    <string name="Content">Manage your business much \n better than before with us</string>
    <string name="header_image">Header Image</string>
    <string name="developer_name">Developed By Hariharan</string>
    <string name="index_btn_name">Let\'s Start</string>
    <string name="signup_header">Sign in if you already have an account with us</string>
    <string name="login_header">Or sign up if you are now!</string>

    <!-- Sign up -->
    <string name="welcome">Welcome</string>
    <string name="signup_1">Signup into your account</string>
    <string name="submitbtn">Submit</string>
    <string name="name">Name</string>
    <string name="passwordicon">passwordIcon</string>
    <string name="phonenoicon">phonenoIcon</string>
    <string name="bgheader">bgHeader</string>
    <string name="contactheader">contactHeader</string>

    <!-- Login -->
    <string name="loginInfo">Sign In to your account</string>
    <string name="email_icon">eMail_icon</string>
    <string name="email_id">Email ID</string>
    <string name="password">password</string>
    <string name="repassword">Re-Enter password</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>