<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="wrap_content"
        android:layout_height="280dp"
        android:background="@drawable/signup_bgheader"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/bgheader"
            android:src="@drawable/login_img"
            tools:ignore="ImageContrastCheck" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="144dp"
        android:fontFamily="@font/ubuntu"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginTop="12sp"
        android:layout_marginEnd="113sp"
        android:fontFamily="@font/ubuntu"
        android:text="@string/loginInfo"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="45sp"
        android:layout_height="45dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="28dp"
        android:contentDescription="@string/email_icon"
        android:src="@drawable/email_icon"
        app:layout_constraintBottom_toTopOf="@+id/imageView6"
        app:layout_constraintEnd_toStartOf="@+id/editText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="245dp"
        android:layout_height="45sp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="28dp"
        android:autofillHints=""
        android:hint="@string/email_id"
        android:inputType="textEmailAddress"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/editText2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="45sp"
        android:layout_height="45sp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="1dp"
        android:contentDescription="@string/passwordicon"
        android:src="@drawable/password_icon"
        app:layout_constraintEnd_toStartOf="@+id/editText2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="245dp"
        android:layout_height="45dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="56dp"
        android:autofillHints=""
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <ImageButton
        android:id="@+id/onSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="82dp"
        android:background="@color/white"
        android:contentDescription="@string/submitbtn"
        android:src="@drawable/submit_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        tools:ignore="ImageContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>